--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "google-map-react": "^2.2.1",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
